--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.8",
-    "@angular/cdk": "^11.0.4",
+    "@angular/cdk": "^11.2.13",
     "@angular/common": "~11.2.8",
     "@angular/compiler": "~11.2.8",
     "@angular/core": "~11.2.8",
+    "@angular/flex-layout": "^9.0.0-beta.31",
     "@angular/forms": "~11.2.8",
     "@angular/material": "^11.2.10",
     "@angular/platform-browser": "~11.2.8",
     "@angular/platform-browser-dynamic": "~11.2.8",
     "@angular/router": "~11.2.8",
     "@types/regression": "^2.0.0",
+    "bootstrap": "^5.1.3",
     "echarts": "^5.0.2",
     "ngx-echarts": "^6.0.1",
     "regression": "^2.0.1",
@@ -39,13 +41,13 @@
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "resize-observer-polyfill": "1.5.1",
     "karma": "~6.1.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
+    "resize-observer-polyfill": "1.5.1",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.5"
